--- a/src/index_1.html
+++ b/src/index_1.html
@@ -38,7 +38,7 @@
                 <p><a href=""><span>About</span></a></p>
             </li>
             <li>
-                <p><a href=""><span>Contact Us</span></a></p>
+                <p><a href="/contact_us"><span>Contact Us</span></a></p>
             </li>
         </ul>
     </nav>
