--- a/src/index_1.html
+++ b/src/index_1.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="bundle.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab|Open+Sans" rel="stylesheet"> 
     <script src="bundle.js" async></script>
-
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 </head>
 <body>
 
@@ -137,13 +137,20 @@
     <footer id="c-footer">
         <div class="container-fluid" style="min-height: 200px;">
             <div class="bar">
-                <div class="to-top">&andand;</div>
+                <a data-scroll href="#section-1">
+                    <div class="to-top" id="to-top">&andand;</div>
+                </a>
             </div>
         </div>
         <div>
             <p class="coppyright-text">Copyright &COPY; 2018 SLIOI. All right reserved.</p>
         </div>
     </footer>
-
+    <script>
+        var scroll = new SmoothScroll('a[href*="#"]',{
+            speed: 1000,
+            easing: 'easeInOutCubic',
+        });
+    </script>
 </body>
 </html>
