Added contact us page

--- a/src/register/index.html
+++ b/src/register/index.html
@@ -13,9 +13,9 @@
     
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="fonts/fonts.css">
-        <link rel="stylesheet" href="../bundle.css">
+        <link rel="stylesheet" href="/bundle.css">
         <link href="https://fonts.googleapis.com/css?family=Zilla+Slab|Open+Sans" rel="stylesheet"> 
-        <script src="../bundle.js" async></script>
+        <script src="/bundle.js" async></script>
 </head>
 <body style="text-align: center;background-color: #465461;">
 
@@ -24,20 +24,20 @@
             <p id="nav-mobile-res-btn">&Congruent;</p>
         </div>
         <ul id="nav-list">
+            <li>
+                <p><a href="/index.html"><span>Home</span></a></p>
+            </li>
+            <li>
+                <p><a href="/gallery"><span>Gallery</span></a></p>
+            </li>
             <li class="active">
-                <p><a href="../index_1.html"><span>Home</span></a></p>
+                <p><a href="/register"><span>Register</span></a></p>
             </li>
             <li>
-                <p><a href=""><span>Gallery</span></a></p>
+                <p><a href="/about"><span>About</span></a></p>
             </li>
             <li>
-                <p><a href="register/"><span>Register</span></a></p>
-            </li>
-            <li>
-                <p><a href=""><span>About</span></a></p>
-            </li>
-            <li>
-                <p><a href="contact_us"><span>Contact Us</span></a></p>
+                <p><a href="/contact-us"><span>Contact Us</span></a></p>
             </li>
         </ul>
     </nav>
