--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -26,19 +26,19 @@
         </div>
         <ul id="nav-list">
             <li class="active">
-                <p><a href="index_1.html"><span>Home</span></a></p>
+                <p><a href="/index.html"><span>Home</span></a></p>
             </li>
             <li>
-                <p><a href=""><span>Gallery</span></a></p>
+                <p><a href="/gallery"><span>Gallery</span></a></p>
             </li>
             <li>
-                <p><a href="register/"><span>Register</span></a></p>
+                <p><a href="/register"><span>Register</span></a></p>
             </li>
             <li>
-                <p><a href=""><span>About</span></a></p>
+                <p><a href="/about"><span>About</span></a></p>
             </li>
             <li>
-                <p><a href="contact_us"><span>Contact Us</span></a></p>
+                <p><a href="/contact-us"><span>Contact Us</span></a></p>
             </li>
         </ul>
     </nav>
