--- a/src/index_1.html
+++ b/src/index_1.html
@@ -11,7 +11,6 @@
 
     <title>SLIOI | Home</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="bundle.css">
     <link href="https://fonts.googleapis.com/css?family=Zilla+Slab|Open+Sans" rel="stylesheet"> 
@@ -138,7 +137,9 @@
         <div class="container-fluid" style="min-height: 200px;">
             <div class="bar">
                 <a data-scroll href="#section-1">
-                    <div class="to-top" id="to-top">&andand;</div>
+                    <div class="to-top" id="to-top">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path class="top-ico" d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"/></svg>
+                    </div>
                 </a>
             </div>
         </div>
