--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -163,7 +163,9 @@
     <div class="container-fluid">
         <div class="bar">
             <a data-scroll href="#section-1">
-                <div class="to-top" id="to-top">&andand;</div>
+                <div class="to-top" id="to-top">
+                    <svg viewBox="0 0 320 512"><path d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
+                </div>
             </a>
         </div>
     </div>
