added 2018 images for gallery

--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -51,7 +51,7 @@
                 <div class="row align-items-center" style="height: 100%;">
                     <div class="col-md-8">
                         <div class="content">
-                            <h3 class="mdc-typography--headline3">Sri Lankan IOI Programme</h3>
+                            <h3 class="mdc-typography--headline3">Sri Lankan IOI Programme - Gallery</h3>
                             <p class="mdc-typography--subtitle1 mdc-theme--secondary">IOI stands for International
                                 Olympiad in Informatics and is one of the eight eight international Science Olympiads,
                                 held annually. <br>
@@ -108,55 +108,6 @@
                 </div>
             </div>
         </div>
-</section>
-
-<section id="section-3">
-    <div class="container" style="padding-bottom: 50px">
-        <div class="content mdc-elevation--z9 mdc-theme--on-secondary"
-             style="background-image: url(../img/gears.png);background-repeat: no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
-            <h4 class="mdc-typography--headline4">What is International Olympiad in Informatics&nbsp;?</h4>
-            <div class="mdc-typography--body2">
-                <p>IOI stands for International Olympiad in Informatics and is one of the eight international Science
-                    Olympiads, held annualy.</p>
-                <p>It is an algorithmic programming competition for students from secondary education schools. The
-                    contestants should have studied in school at the beginning of the year and under 20 years (born on
-                    or after 1<sup>st</sup> of July). Half the contestents are awarded medals at IOI.</p>
-                <p>Contestents have to write programs in C++, Pascal or Java to solve 3 tasks in 5 hours each day, for
-                    two contest days.</p>
-                <p>IOI 2018 was held in Japan with the participation of 335 participants from 87 countries around the
-                    world.</p>
-                <p>IOI 2019 is ti be held in Azerbaijan, a country in the Eurasian region.</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="section-4">
-    <div class="container" style="padding-bottom: 50px">
-        <div class="content mdc-elevation--z9 mdc-theme--on-secondary"
-             style="background-image: url(../img/medal-back.png);background-repeat: no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
-            <h4 class="mdc-typography--headline4">What Sri Lanka achieved this far&nbsp;?</h4>
-            <div class="mdc-typography--body2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc elementum nulla ac leo varius, ac
-                    malesuada ipsum vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur a
-                    lectus eros. Mauris fermentum nunc at massa sollicitudin iaculis. Proin sed quam tristique ante
-                    sollicitudin lobortis eu non ante.</p>
-                <div class="container-fluid" style="padding-top: 20px">
-                    <div class="row justify-content-start">
-                        <div class="col-md-2 col-sm-3 col-4">
-                            <img class="img-fluid" src="../img/gold-count.png" alt="Gold Medal Count">
-                        </div>
-                        <div class="col-md-2 col-sm-3 col-4">
-                            <img class="img-fluid" src="../img/silver-count.png" alt="Silver Medal Count">
-                        </div>
-                        <div class="col-md-2 col-sm-3 col-4">
-                            <img class="img-fluid" src="../img/bronze-count.png" alt="Bronze Medal Count">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <footer id="c-footer">
