changed url of gallery page imges as a sample

--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -74,10 +74,11 @@
 <section id="section-2">
     <div class="container-fluid">
         <div class="row justify-content-around align-items-center">
+            IOI 
             <div class="col-xl-3 col-md-4 col-sm-6 col-10">
                 <div class="mdc-card team-card">
                     <div class="mdc-card__media mdc-card__media--square"
-                         style='background-image: url("../img/team-2016.png")'>
+                         style='background-image: url("../img/2018/1.jpg")'>
                     </div>
                     <div class="title">
                         <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K16</h2>
@@ -88,7 +89,7 @@
             <div class="col-xl-3 col-md-4 col-sm-6 col-10">
                 <div class="mdc-card team-card">
                     <div class="mdc-card__media mdc-card__media--square"
-                         style='background-image: url("../img/team-2017.png")'>
+                         style='background-image: url("../img/2018/1.jpg")'>
                     </div>
                     <div class="title">
                         <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K17</h2>
@@ -99,7 +100,7 @@
             <div class="col-xl-3 col-md-4 col-sm-6 col-10">
                 <div class="mdc-card team-card">
                     <div class="mdc-card__media mdc-card__media--square"
-                         style='background-image: url("../img/team-2018.png")'>
+                         style='background-image: url("../img/2018/1.jpg")'>
                     </div>
                     <div class="title">
                         <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K18</h2>
