contents updated & syllabuss pdf aded

--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -12,17 +12,17 @@
 
     <title>SLIOI | Gallery</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1/dist/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../main.min.css">
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 </head>
 <body>
 
-<nav class="c-nav-bar abs" id="c-nav-bar">
+<nav class="c-nav-bar_" id="c-nav-bar">
     <div class="btn-mob-resp">
         <p id="nav-mobile-res-btn">&Congruent;</p>
     </div>
-    <ul id="nav-list">
+    <ul id="nav-list" style="padding-top: 7px">
         <li>
             <p><a href="../"><span>Home</span></a></p>
         </li>
@@ -40,131 +40,98 @@
         </li>
     </ul>
 </nav>
+<div style="height: 100px;"></div>
 
 <section id="section-1">
-    <div class="section-style-1">
-        <div class="container-fluid" style="height: 100%">
-            <div style="position: relative;height: 100%;width:100%">
-                <div class="img-cont">
-                    <img src="../img/man-ico.svg" alt="">
-                </div>
-                <div class="row align-items-center" style="height: 100%;">
-                    <div class="col-md-8">
-                        <div class="content">
-                            <h3 class="mdc-typography--headline3">Sri Lankan IOI Programme</h3>
-                            <p class="mdc-typography--subtitle1 mdc-theme--secondary">IOI stands for International
-                                Olympiad in Informatics and is one of the eight eight international Science Olympiads,
-                                held annually. <br>
-                                It is an algorithmic programme competition for students from secondary education
-                                schools.</p>
-                            <form action="../register/">
-                                <button class="mdc-button  mdc-button--raised">
-                                    REGISTER
-                                </button>
-                            </form>
-                        </div>
+    <div class="container">
+        <div class="mdc-elevation--z9 mdc-theme--on-secondary">
+            <br>
+            <div class="content">
+                <h4 class="mdc-typography--headline4">IOI 2018 Japan</h4>
+            </div>
+            <br>
+            <div class="container-fluid">
+                <div class="card-columns">
+                    <div class="card">
+                        <a href='https://photos.google.com/share/AF1QipOIBF5dBd2IoVcpNzmmU0hQn1Bffbh8VqUNKmgAdLZEbmPfvMV-RP4tQze1kOIy7A?key=X1FZQnNRejdjUGJjQjNuTUZqV2FMbUo5U2xEWGFB&source=ctrlq.org' target="_blank">
+                            <img src='https://lh3.googleusercontent.com/kXGMbsozCjZnC-QaCdIDU4kmrAPanFwbc9mWnCFXTk5qMEahO-KiLzfQRVWDEXZ9VF5Moc6VjHbA-Zwa7vfrard-hAys3_B-GLbaDbVqjPtMU4B1CS-lU75XnlBNM3j5fqeGm5MD4A=w2400' class="card-img-top" />
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href='https://photos.google.com/share/AF1QipNzAaXpdEpWt374ga9kY6tfyPNVl3dR5qShcyubTSjo1jDWxG57F9U_3DMBFbaAFA?key=RXc5alhSTmYyQVBKRWp5clhBbDFWT2hoSHV2Qi1n&source=ctrlq.org' target="_blank">
+                            <img src='https://lh3.googleusercontent.com/y7VJdqtr5Fz9JOlkJ-AJJ9nXdUGgkngy0J-qGyd3GK2N7AOkMCr0vKJWLhlWzuFB2qmwG5fMbfucSCOouPTWbl7Pux63VUC1zTNNymctQoUZSF1qsTLuTrisM6hh3bu6Zp_2Rra5Qg=w2400' class="card-img-top" />
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href='https://photos.google.com/share/AF1QipPCXenbMJpvnu0EqO8AA7bZn8WEot5Z3naHDpTKBgsZThZo959DwEF_gUd_tDcFzA?key=UFVtNVNnbF8ycmdXUExNZ1Z3ejRwWXAxMXZpLTJ3&source=ctrlq.org' target="_blank">
+                            <img src='https://lh3.googleusercontent.com/o4QV2zNs-Il8MauaQc_Oy0rbF0cBJcoQUkDJ-HqtKT0Az9f-IlIFbbI7kO1MPsRMp-Pof2DqX-KnTKXz1OajMaUS1rKev44a15RqmpyJKiF28DggPA4S8EgkH-84Jji94R_4Nf6hiA=w2400' class="card-img-top" />
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href='https://photos.google.com/share/AF1QipMx89tZ3unFgUI8-pAX7yqcwbDPUQX6tGy6gJNhx0mDaaerABMI9OZrT5da2x8BSA?key=OHdGWkp4MUZHZ0lvcXdZXzJETjVHTGxERVZoeW1B&source=ctrlq.org' target="_blank">
+                            <img src='https://lh3.googleusercontent.com/IVjg8SiQMtA3IkU0aqOhGqwSbNiffIPptR5TyEso_9aE9kBOx0WalwatWKBjXL4KVQJkwajsD8lO8zZekRtuLwTebMwYoFcoubWM_CSVUSHqXGZ3j2AGHp7joWP-gp8mtscOX70h1g=w2400' class="card-img-top" />
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href='https://photos.google.com/share/AF1QipOkhMBhoN9sNLYc3VuO7PY3oAhIc9EFvIMSOUYbQ9B4aji7G80pNl9FP_c5de-tlQ?key=aEpCVDZPc1pjS2pSNmFuUmprRm1GWGwzNFA4ZUpB&source=ctrlq.org' target="_blank">
+                            <img src='https://lh3.googleusercontent.com/Byl1DmduqVJTRbnFT4EDxVoofsfWikGmsdPnVwZrv8-IDM_8bkJRZ4qo8g6EqBS3Abxib6KYSz5Hud1R_lup8sGLioCpb5Js7fgadxmXIDhk_UWQBRuGDsdmvLG_YhgQUFAFnGspig=w2400' class="card-img-top" />
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href='https://photos.google.com/share/AF1QipO0BsytaHVh9qBlwzQ-4uji32fqlhyaf9wBmmihvAmeiKsRWY7jfEOPe5G4wnGI1Q?key=TktiVXFtbUhDSk00NjNKZ2cyODdnX3VLUkZhVDBR&source=ctrlq.org' target="_blank">
+                            <img src='https://lh3.googleusercontent.com/cLNydi463fZ1cNB9tSvhEIsWojIbCcQQJmgmx6PhnXnJAi0NJ8r6JIhKK7dAUcFYcODc8NkFfn7SWl6BXp-1sQJIB0n0sAXu28zfgMWwoWBu9fNSPF9dZZR8rZyOt5uaKVejBuFJRg=w2400' class="card-img-top" />
+                        </a>
                     </div>
                 </div>
-
+                <div style="height: 13px;"></div>
             </div>
+       </div>
+    </div>
+</section>
+<div style="height: 13px;"></div>
+<section id="section-1">
+        <div style="height: 13px;"></div>
+        <div class="container">
+        <div class="mdc-elevation--z9 mdc-theme--on-secondary">
+            <br>
+            <div class="content">
+                <h4 class="mdc-typography--headline4">IOI 2017 Iran</h4>
+            </div>
+            <br>
+            <div class="container-fluid">
+                <div class="card-columns">
+                    <div class="card">
+                            <a href='https://photos.google.com/share/AF1QipOD919I0AEuX_IXbhF1bgTgEKQUZYRWOm_x5fX4owGypCNxLeZ5VA_y-ERPZD3sKg?key=em4yZ3QtLTNMeTU3T2lmXzdpT2ktdEhMallVV3B3&source=ctrlq.org'>
+                                <img src='https://lh3.googleusercontent.com/cXc4sL8JUJ9isKatZEFi9YuwMcb26ICd2G2dkPtKUUupmBi9acnp54_riVh_w60qbr8T4ulExf-8lUYvETKM9LW87W7Bd68v5e6FzdGYToIaYAYJnzLoo2uGCjdIBY2jZv2Sf03Vew=w2400'  class="card-img-top" />
+                            </a>
+                    </div>
+                    <div class="card">
+                            <a href='https://photos.google.com/share/AF1QipOr9d98oHto7FFkLoaTeYllfctBx39uNF65HyEBFDR2ltOBMuXq3b8UYzwGG2PQ4g?key=TFoxZFRodUJGTjk1cjd2Zi16NlZYR1FKaWNabmZB&source=ctrlq.org'>
+                                <img src='https://lh3.googleusercontent.com/SIU4yPkKUr1GDZbuZYLhK4O__gIbPCHXXY5o8wf04eXJyzQW-a06FzLWVx6-nvrcVmzjrCOafZJ9eqThRXoJqkk0F47_aoPRMz0ffKN5H8fRLA1jbYE3VrHBsNHMKoeNOcSuU14Z5A=w2400' class="card-img-top"/>
+                            </a>
+                    </div>
+                    <div class="card">
+                            <a href='https://photos.google.com/share/AF1QipPKKi-IAz--9KpqEqKo85rUzf9v9xw4aL5ekOSUm0qSf6VVFNQn91AaS0UL_0Uj1A?key=MUFBYUlCYW93Vzl3U0U3TC00WG5FclA4SlAxVUl3&source=ctrlq.org'>
+                                <img src='https://lh3.googleusercontent.com/Q4XBvrkkMHVDDZXh_QC616RzzUn3oujtDD_sE3M9P0jqzJGiPQBeAOcLihtDZDWSn87dwrhkDWLPSUDnA7OV8syhYrsH27VEtcYv2h95h--woYpuSWUNPwurOGKBAeAXorxXYFC4YA=w2400' class="card-img-top"/>
+                            </a>
+                    </div>
+                </div>
+            </div>
+            <div style="height: 13px;"></div>
         </div>
     </div>
 </section>
 
-<section id="section-2">
-    <div class="container-fluid">
-        <div class="row justify-content-around align-items-center">
-            <div class="col-xl-3 col-md-4 col-sm-6 col-10">
-                <div class="mdc-card team-card">
-                    <div class="mdc-card__media mdc-card__media--square"
-                         style='background-image: url("../img/team-2016.png")'>
-                    </div>
-                    <div class="title">
-                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K16</h2>
-                        <span class="mdc-typography--body2">Russia</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-md-4 col-sm-6 col-10">
-                <div class="mdc-card team-card">
-                    <div class="mdc-card__media mdc-card__media--square"
-                         style='background-image: url("../img/team-2017.png")'>
-                    </div>
-                    <div class="title">
-                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K17</h2>
-                        <span class="mdc-typography--body2">Iran</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-md-4 col-sm-6 col-10">
-                <div class="mdc-card team-card">
-                    <div class="mdc-card__media mdc-card__media--square"
-                         style='background-image: url("../img/team-2018.png")'>
-                    </div>
-                    <div class="title">
-                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K18</h2>
-                        <span class="mdc-typography--body2">Japan</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-</section>
+<br>
 
-<section id="section-3">
-    <div class="container" style="padding-bottom: 50px">
-        <div class="content mdc-elevation--z9 mdc-theme--on-secondary"
-             style="background-image: url(../img/gears.png);background-repeat: no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
-            <h4 class="mdc-typography--headline4">What is International Olympiad in Informatics&nbsp;?</h4>
-            <div class="mdc-typography--body2">
-                <p>IOI stands for International Olympiad in Informatics and is one of the eight international Science
-                    Olympiads, held annualy.</p>
-                <p>It is an algorithmic programming competition for students from secondary education schools. The
-                    contestants should have studied in school at the beginning of the year and under 20 years (born on
-                    or after 1<sup>st</sup> of July). Half the contestents are awarded medals at IOI.</p>
-                <p>Contestents have to write programs in C++, Pascal or Java to solve 3 tasks in 5 hours each day, for
-                    two contest days.</p>
-                <p>IOI 2018 was held in Japan with the participation of 335 participants from 87 countries around the
-                    world.</p>
-                <p>IOI 2019 is ti be held in Azerbaijan, a country in the Eurasian region.</p>
-            </div>
-        </div>
-    </div>
-</section>
 
-<section id="section-4">
-    <div class="container" style="padding-bottom: 50px">
-        <div class="content mdc-elevation--z9 mdc-theme--on-secondary"
-             style="background-image: url(../img/medal-back.png);background-repeat: no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
-            <h4 class="mdc-typography--headline4">What Sri Lanka achieved this far&nbsp;?</h4>
-            <div class="mdc-typography--body2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc elementum nulla ac leo varius, ac
-                    malesuada ipsum vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur a
-                    lectus eros. Mauris fermentum nunc at massa sollicitudin iaculis. Proin sed quam tristique ante
-                    sollicitudin lobortis eu non ante.</p>
-                <div class="container-fluid" style="padding-top: 20px">
-                    <div class="row justify-content-start">
-                        <div class="col-md-2 col-sm-3 col-4">
-                            <img class="img-fluid" src="../img/gold-count.png" alt="Gold Medal Count">
-                        </div>
-                        <div class="col-md-2 col-sm-3 col-4">
-                            <img class="img-fluid" src="../img/silver-count.png" alt="Silver Medal Count">
-                        </div>
-                        <div class="col-md-2 col-sm-3 col-4">
-                            <img class="img-fluid" src="../img/bronze-count.png" alt="Bronze Medal Count">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <footer id="c-footer">
     <div class="container-fluid">
         <div class="bar">
             <a data-scroll href="#section-1">
                 <div class="to-top" id="to-top">
-                    <svg viewBox="0 0 320 512"><path d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
+                    <svg viewBox="0 0 320 512"><path class="to-top-btn-ico" d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
                 </div>
             </a>
         </div>
