--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,13 @@
                     <div class="col-md-8">
                         <div class="content">
                             <h3 class="mdc-typography--headline3">Sri Lankan IOI Programme</h3>
-                            <p class="mdc-typography--subtitle1 mdc-theme--secondary">IOI stands for International
+                            <!-- <p class="mdc-typography--subtitle1 mdc-theme--secondary">IOI stands for International
                                 Olympiad in Informatics and is one of the eight eight international Science Olympiads,
                                 held annually. <br>
                                 It is an algorithmic programme competition for students from secondary education
-                                schools.</p>
+                                schools.</p> -->
+                                <p class="mdc-typography--subtitle1 mdc-theme--secondary">The Sri Lankan Olympiad in Informatics is an annual programming contest for secondary school students. The national team for the International Olympiad in Informatics 2019 held in Azerbaijan is selected through this program. Secondary school students under 20 years of age by 01st of July 2019 are eligible to take part in this contest.</p>
+                                <p class="mdc-typography--subtitle1 mdc-theme--secondary">Sign-up for the newsletter to be notified for upcoming events.</p>
                             <form action="register">
                                 <button class="mdc-button  mdc-button--raised">
                                     REGISTER
@@ -80,7 +82,7 @@
                          style='background-image: url("img/team-2016.png")'>
                     </div>
                     <div class="title">
-                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K16</h2>
+                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2016</h2>
                         <span class="mdc-typography--body2">Russia</span>
                     </div>
                 </div>
@@ -91,7 +93,7 @@
                          style='background-image: url("img/team-2017.png")'>
                     </div>
                     <div class="title">
-                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K17</h2>
+                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2017</h2>
                         <span class="mdc-typography--body2">Iran</span>
                     </div>
                 </div>
@@ -102,7 +104,7 @@
                          style='background-image: url("img/team-2018.png")'>
                     </div>
                     <div class="title">
-                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2K18</h2>
+                        <h2 class="mdc-typography--headline6 mdc-theme--on-surface">IOI 2018</h2>
                         <span class="mdc-typography--body2">Japan</span>
                     </div>
                 </div>
@@ -116,7 +118,11 @@
              style="background: url(img/gears.png) no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
             <h4 class="mdc-typography--headline4">What is International Olympiad in Informatics&nbsp;?</h4>
             <div class="mdc-typography--body2">
-                <p>IOI stands for International Olympiad in Informatics and is one of the eight international Science
+                <p>It is an algorithmic programming competition held annually for secondary school students.  At IOI,  contestants have to write programs in C++, Pascal or Java to solve a set of problems within a specified time limit.  </p>
+                <p>Every year, the member countries of IOI send 4 contestants to compete. Sri Lanka has taken part in this competition  since 1992. IOI 2018 was held in Japan with the participation of 335 participants from 87 countries around the world.</p>
+                <p>IOI 2019 is to be held next year in Azerbaijan (<a style="text-decoration: none" href="https://www.ioi2019.az" target="_blank">www.ioi2019.az</a>).</p>
+                <p>IOI Syllabus <a href="ioi-syllabus/ioi-syllabus.pdf" style="text-decoration: none" target="_blank">see this.</a></p>
+                <!-- <p>IOI stands for International Olympiad in Informatics and is one of the eight international Science
                     Olympiads, held annualy.</p>
                 <p>It is an algorithmic programming competition for students from secondary education schools. The
                     contestants should have studied in school at the beginning of the year and under 20 years (born on
@@ -125,7 +131,7 @@
                     two contest days.</p>
                 <p>IOI 2018 was held in Japan with the participation of 335 participants from 87 countries around the
                     world.</p>
-                <p>IOI 2019 is ti be held in Azerbaijan, a country in the Eurasian region.</p>
+                <p>IOI 2019 is ti be held in Azerbaijan, a country in the Eurasian region.</p> -->
             </div>
         </div>
     </div>
@@ -133,14 +139,9 @@
 
 <section id="section-4">
     <div class="container" style="padding-bottom: 50px">
-        <div class="content mdc-elevation--z9 mdc-theme--on-secondary"
-             style="background: url(img/medal-back.png) no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
-            <h4 class="mdc-typography--headline4">What Sri Lanka achieved this far&nbsp;?</h4>
+        <div class="content mdc-elevation--z9 mdc-theme--on-secondary" style="background: url(img/medal-back.png) no-repeat;background-position-x: right;background-position-y: bottom;background-size: contain">
+            <h4 class="mdc-typography--headline4">What is Sri Lanka achieved this far&nbsp;?</h4>
             <div class="mdc-typography--body2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc elementum nulla ac leo varius, ac
-                    malesuada ipsum vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur a
-                    lectus eros. Mauris fermentum nunc at massa sollicitudin iaculis. Proin sed quam tristique ante
-                    sollicitudin lobortis eu non ante.</p>
                 <div class="container-fluid" style="padding-top: 20px">
                     <div class="row justify-content-start">
                         <div class="col-md-2 col-sm-3 col-4">
@@ -159,12 +160,41 @@
     </div>
 </section>
 
+<section id="section-4">
+    <div class="container" style="padding-bottom: 50px">
+        <div class="content mdc-elevation--z9 mdc-theme--on-secondary" >
+            <h4 class="mdc-typography--headline4">What is Sri Lankan Olympiad in Informatics&nbsp;?</h4>
+            <div class="mdc-typography--body2">
+                <p>Sri Lankan Olympiad in Informatics is a programming contest for secondary school students, organized by University of Colombo School of Computing to improve the knowledge and skill of computing in young students.</p>
+                <p>Additionally, students to represent Sri Lanka at the International Olympiad in Informatics program are selected through this competition.</p>
+                <p>The national competition comprises of a few stages:</p>
+                <ul>
+                    <li>Online IQ test</li>
+                    <li>C++ Programming training camp</li>
+                    <li>National training pool selection test</li>
+                    <li>Algorithms training camp</li>
+                    <li>National Olympiad in Informatics competition</li>
+                    <li>IOI national team selection test</li>
+                    <li>Awarding ceremony</li>
+                </ul>
+                <br>
+                <p style="text-align: center">Sign-up for the newsletter to be notified when SLOI 2019 begins.</p>
+                <form action="register">
+                    <p style="text-align: center">
+                        <button class="mdc-button  mdc-button--raised">REGISTER</button>
+                    </p>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
 <footer id="c-footer">
     <div class="container-fluid">
         <div class="bar">
-            <a data-scroll href="#section-1">
+            <a id="top-btn" data-scroll href="#section-1">
                 <div class="to-top" id="to-top">
-                    <svg viewBox="0 0 320 512"><path d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
+                    <svg viewBox="0 0 320 512"><path class="to-top-btn-ico" d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
                 </div>
             </a>
         </div>
