--- a/src/contact_us/index.html
+++ b/src/contact_us/index.html
@@ -55,15 +55,8 @@
                     <div class="col-md-8">
                         <div class="content">
                             <h1 class="heading-1">Sri Lankan IOI Programme - Contact Us</h1>
-                            <p class="text_1">IOI stands for International Olympiad in Informatics and is one of the
-                                eight eight international Science Olympiads, held annually. <br>
-                                It is an algorithmic programme competition for students from secondary education
-                                schools.</p>
-                            <form action="#section-3">
-                                <button class="mdc-button  mdc-button--raised">
-                                    Get In Touch
-                                </button>
-                            </form>
+                            <p class="text_1" style="color: #d2d2b6">This program is organized by University of Colombo School of computing, with the aid of local IOI alumni. </p>
+                            <a data-scroll href="#section-3" class="mdc-button  mdc-button--raised">Get In Touch</a>
                         </div>
                     </div>
                 </div>
@@ -77,15 +70,29 @@
              style="background: url(../img/contact-icon.png) no-repeat;background-position-x: right;background-position-y: bottom; background-size: contain;">
             <h4 class="mdc-typography--headline4">Getting in touch is easy&nbsp;!</h4>
             <div class="mdc-typography--body2">
-                <p>Email :- slioi@gmail.com</p>
-                <p>Contact No :- 0768989890</p>
-                <p>Address :- PC house, rajagiriya, colombo</p>
-                <p>
-                <form action="https://www.facebook.com/srilankaioi/">
-                    <button class="mdc-icon-button icon-button" formtarget="_blank">
+                <!-- <p>Email :- mail@pasindu.xyz</p>
+                <p>Contact No : 076 834 9323</p> -->
+                <table>
+                    <tr>
+                        <td>Email</td>
+                        <td>&nbsp;:&nbsp;</td>
+                        <td>mail@pasindu.xyz</td>
+                    </tr>
+                    <tr>
+                        <td>Contact No</td>
+                        <td>&nbsp;:&nbsp;</td>
+                        <td>076 834 9323</td>
+                    </tr>
+                </table>
+                <br>
+                <p style="text-align: center">
+                    <a href="https://www.facebook.com/srilankaioi/" class="mdc-icon-button icon-button" style="padding-top: 6px" target="_blank">
                         <i class="fab fa-facebook-f"></i>
-                    </button>
-                </form>
+                    </a>
+                        &nbsp;
+                    <a href="https://www.youtube.com/" class="mdc-icon-button icon-button" style="background-color: #D50000;padding-top: 6px" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
                 </p>
             </div>
         </div>
@@ -97,7 +104,7 @@
         <div class="bar">
             <a data-scroll href="#section-1">
                 <div class="to-top" id="to-top">
-                    <svg viewBox="0 0 320 512"><path d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
+                    <svg viewBox="0 0 320 512"><path class="to-top-btn-ico" d="M177 160l136 136c9 9 9 24 0 34l-23 22c-9 10-24 10-34 0l-96-96-96 96c-10 10-25 10-34 0L7 330c-9-10-9-25 0-34l136-136c9-10 25-10 34 0z" class="top-ico"/></svg>
                 </div>
             </a>
         </div>
@@ -108,6 +115,10 @@
 </footer>
 <script>
     var scroll = new SmoothScroll('a[href*="#"]', {
+        speed: 1000,
+        easing: 'easeInOutCubic',
+    });
+    var scroll_ = new SmoothScroll('form[action*="#"]', {
         speed: 1000,
         easing: 'easeInOutCubic',
     });
