contact us page removed

--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -35,9 +35,9 @@
         <li>
             <p><a href="../about"><span>About</span></a></p>
         </li>
-        <li>
-            <p><a href="../contact_us"><span>Contact Us</span></a></p>
-        </li>
+        <!-- <li>
+            <p><a href=""><span>Contact Us</span></a></p>
+        </li> -->
     </ul>
 </nav>
 
