Renamed the contact _us page to about

--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -33,7 +33,7 @@
             <p><a href="../register"><span>Register</span></a></p>
         </li>
         <li>
-            <p><a href="../contact_us"><span>Contact Us</span></a></p>
+            <p><a href="../about"><span>About</span></a></p>
         </li>
     </ul>
 </nav>
