--- a/src/about/index.html
+++ b/src/about/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
           content="SL, ioi, slioi, slio, sloi, sri, lanka, olympiad, informatics, computing, competitive, programming">
 
-    <title>SLIOI | Contact Us</title>
+    <title>SLIOI | About</title>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1/dist/bootstrap-grid.min.css">
@@ -36,7 +36,7 @@
             <p><a href="../register"><span>Register</span></a></p>
         </li>
         <li class="active">
-            <p><a href="../contact_us"><span>Contact Us</span></a></p>
+            <p><a href="../about"><span>About</span></a></p>
         </li>
     </ul>
 </nav>
@@ -51,7 +51,7 @@
                 <div class="row align-items-center" style="height: 100%;">
                     <div class="col-md-8">
                         <div class="content">
-                            <h1 class="heading-1">Sri Lankan IOI Programme - Contact Us</h1>
+                            <h1 class="heading-1">Sri Lankan IOI Programme - About</h1>
                             <p class="text_1" style="color: #d2d2b6">This program is organized by University of Colombo School of computing, with the aid of local IOI alumni. </p>
                             <a data-scroll href="#section-3" class="mdc-button  mdc-button--raised">Get In Touch</a>
                         </div>
@@ -112,10 +112,6 @@
 </footer>
 <script>
     var scroll = new SmoothScroll('a[href*="#"]', {
-        speed: 1000,
-        easing: 'easeInOutCubic',
-    });
-    var scroll_ = new SmoothScroll('form[action*="#"]', {
         speed: 1000,
         easing: 'easeInOutCubic',
     });
