link text changes

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                                 <p class="mdc-typography--subtitle1 mdc-theme--secondary">Sign-up for the newsletter to be notified for upcoming events.</p>
                             <form action="register">
                                 <button class="mdc-button  mdc-button--raised">
-                                    REGISTER
+                                    Sign-up for the newsletter
                                 </button>
                             </form>
                         </div>
@@ -118,7 +118,7 @@
                 <p>It is an algorithmic programming competition held annually for secondary school students.  At IOI,  contestants have to write programs in C++, Pascal or Java to solve a set of problems within a specified time limit.  </p>
                 <p>Every year, the member countries of IOI send 4 contestants to compete. Sri Lanka has taken part in this competition  since 1992. IOI 2018 was held in Japan with the participation of 335 participants from 87 countries around the world.</p>
                 <p>IOI 2019 is to be held next year in Azerbaijan (<a style="text-decoration: none" href="https://www.ioi2019.az" target="_blank">www.ioi2019.az</a>).</p>
-                <p>IOI Syllabus <a href="ioi-syllabus/ioi-syllabus.pdf" style="text-decoration: none" target="_blank">see this.</a></p>
+                <p> <a href="ioi-syllabus/ioi-syllabus.pdf" style="text-decoration: none" target="_blank">Click here</a> for the IOI Syllabus</p>
                 <!-- <p>IOI stands for International Olympiad in Informatics and is one of the eight international Science
                     Olympiads, held annualy.</p>
                 <p>It is an algorithmic programming competition for students from secondary education schools. The
@@ -178,7 +178,7 @@
                 <p style="text-align: center">Sign-up for the newsletter to be notified when SLOI 2019 begins.</p>
                 <form action="register">
                     <p style="text-align: center">
-                        <button class="mdc-button  mdc-button--raised">REGISTER</button>
+                        <button class="mdc-button  mdc-button--raised">Sign-up for the newsletter</button>
                     </p>
                 </form>
             </div>
