--- a/src/about/index.html
+++ b/src/about/index.html
@@ -14,7 +14,16 @@
             informatics, computing, competitive, programming">
 
         <title>SLIOI | About</title>
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128633920-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
+            gtag('config', 'UA-128633920-1');
+        </script>
 
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1/dist/bootstrap-grid.min.css">
