--- a/src/register/index.html
+++ b/src/register/index.html
@@ -11,7 +11,16 @@
           content="SL, ioi, slioi, slio, sloi, sri, lanka, olympiad, informatics, computing, competitive, programming">
 
     <title>SLIOI | Registration</title>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128633920-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-128633920-1');
+    </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-v4-grid-only@1/dist/bootstrap-grid.min.css">
     <link rel="stylesheet" href="../main.min.css">
 </head>
