- content fixes - button ripple removal - nav bar fixes - webpack config fixes

--- a/src/gallery/index.html
+++ b/src/gallery/index.html
@@ -31,7 +31,7 @@
     <div class="btn-mob-resp">
         <p id="nav-mobile-res-btn">&Congruent;</p>
     </div>
-    <ul id="nav-list" style="padding-top: 7px">
+    <ul id="nav-list">
         <li>
             <p><a href="../"><span>Home</span></a></p>
         </li>
