--- a/src/about/index.html
+++ b/src/about/index.html
@@ -69,7 +69,7 @@
                             <div class="col-md-8">
                                 <div class="content">
                                     <h1 class="heading-1">Sri Lankan IOI
-                                        Programme - About</h1>
+                                        Program</h1>
                                     <p class="text_1" style="color: #d2d2b6">This
                                         program is organized by University of
                                         Colombo School of computing, with the
